# python-language-server-experiments

./: README.md
pydance/: .gitignore  package-lock.json  package.json
pydance/src/: extension.ts
pylight/: .gitignore  Cargo.toml
pylight/src/: files.rs  lib.rs  python.rs  search.rs  search_skim.rs  symbols.rs
