[package]
name = "symbol-experiments"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.5.0"
clap = { version = "4.5.2", features = ["derive"] }
anyhow = "1.0.80"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.36", features = ["full"] }
num_cpus = "1.16"
async-walkdir = "0.2"
futures-lite = "1.13"
rayon = "1.9.0"
tree-sitter = "0.20.10"
tree-sitter-python = "0.20.4"
fuzzy-matcher = "0.3"
bincode = "1.3"
flate2 = "1.0"
fluent-uri = "0.3"
serde = { version = "1.0", features = ["derive"] }
crossterm = "0.29"
rustyline = "15.0"
nucleo-matcher = "0.3"
lsp-server = "0.7.8"
lsp-types = "0.97.0"
serde_json = "1.0.140"
url = "2.5.4"
radix_trie = "0.2.1"

[dev-dependencies]
tempfile = "3.5.0"
